# bayes_handson

./: LICENSE  README.md  pyproject.toml
notebooks/: penguin_model_comparison.ipynb  penguins.html
