[project]
name = "bayesian-computation-book"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphviz>=0.20.3",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "jax>=0.4.38",
    "numpyro>=0.16.1",
    "pymc>=5.20.0",
    "scikit-learn>=1.6.1",
    "nutpie>=0.13.2",
    "numba>=0.60.0",
    "sweetviz>=2.3.1",
    "mlflow>=2.19.0",
    "statsmodels>=0.14.4",
]
